--- a/Android/ManyFest/res/layout/frg_map.xml
+++ b/Android/ManyFest/res/layout/frg_map.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.xpto.manyfest.ActMain$PlaceholderFragment" >
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Map" />
+    <fragment
+        android:id="@+id/layMapHole"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
