--- a/Android/ManyFest/res/values/styles.xml
+++ b/Android/ManyFest/res/values/styles.xml
@@ -1,20 +1,10 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
-
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+        <item name="actionMenuTextColor">#b6e5fb</item>
+        <item name="android:actionMenuTextColor" tools:targetApi="11">#b6e5fb</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps" tools:targetApi="14">false</item>
     </style>
 
 </resources>
