--- a/Android/ManyFest/res/values/dimens.xml
+++ b/Android/ManyFest/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="txt_font_size_big">20sp</dimen>
     <dimen name="txt_height">35dip</dimen>
     
+    <dimen name="lbl_font_size_tiny">12sp</dimen>
     <dimen name="lbl_font_size_small">14sp</dimen>
     <dimen name="lbl_font_size_default">18sp</dimen>
     <dimen name="lbl_font_size_big">22sp</dimen>
