--- a/Android/Legion/res/layout/act_main.xml
+++ b/Android/Legion/res/layout/act_main.xml
@@ -1,17 +1,40 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pgrMain"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <android.support.v4.view.PagerTabStrip
-        android:id="@+id/pager_title_strip"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pgrMain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:background="#f3f3f3"
-        android:paddingBottom="15dp"
-        android:paddingTop="15dp"
-        android:tag="b"
-        android:textColor="@color/gray_half" />
+        android:layout_height="match_parent"
+        android:layout_gravity="top|left" >
 
-</android.support.v4.view.ViewPager>
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pager_title_strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="#f3f3f3"
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:tag="b"
+            android:textColor="@color/gray_half" />
+    </android.support.v4.view.ViewPager>
+
+    <View
+        android:id="@+id/viwCover"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top|left"
+        android:background="@color/black_shadow"
+        android:clickable="false"
+        android:visibility="gone" />
+
+    <FrameLayout
+        android:id="@+id/layContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top|left"
+        android:background="@color/transparent"
+        android:clickable="false" />
+
+</FrameLayout>
