--- a/Android/Legion/res/layout/act_user_profile.xml
+++ b/Android/Legion/res/layout/act_user_profile.xml
@@ -14,7 +14,7 @@
             android:layout_width="200dip"
             android:layout_height="@dimen/txt_height"
             android:layout_gravity="top|center_horizontal"
-            android:background="@drawable/txt_edit"
+            android:background="@drawable/txt"
             android:ellipsize="end"
             android:gravity="center"
             android:hint="@string/f_newuser_user"
@@ -29,7 +29,7 @@
             android:layout_height="@dimen/txt_height"
             android:layout_gravity="top|center_horizontal"
             android:layout_marginTop="20dip"
-            android:background="@drawable/txt_edit"
+            android:background="@drawable/txt"
             android:ellipsize="end"
             android:gravity="center"
             android:hint="@string/f_newuser_pass1"
@@ -45,7 +45,7 @@
             android:layout_height="@dimen/txt_height"
             android:layout_gravity="top|center_horizontal"
             android:layout_marginTop="20dip"
-            android:background="@drawable/txt_edit"
+            android:background="@drawable/txt"
             android:ellipsize="end"
             android:gravity="center"
             android:hint="@string/f_newuser_pass2"
