--- a/Android/Legion/res/layout/event_row.xml
+++ b/Android/Legion/res/layout/event_row.xml
@@ -8,25 +8,114 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/txt_edit"
+        android:background="@drawable/txt_default"
         android:orientation="vertical"
         android:padding="@dimen/fields_spacing_labels" >
 
         <TextView
-            android:id="@+id/txtTitle"
+            android:id="@+id/txtName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Reivindicações"
             android:textSize="@dimen/lbl_font_size_default" />
 
         <TextView
             android:id="@+id/txtDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:tag="t"
-            android:text="inicia em 22/05 18:00"
-            android:textSize="@dimen/lbl_font_size_tiny" />
+            android:textSize="@dimen/lbl_font_size_small" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:id="@+id/btnLike"
+                android:layout_width="105dip"
+                android:layout_height="25dip"
+                android:background="@drawable/btn"
+                android:clickable="true"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="2.5dip" >
+
+                <TextView
+                    android:id="@+id/txtLikes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="0"
+                    android:textSize="@dimen/lbl_font_size_tiny" />
+
+                <ImageView
+                    android:layout_width="15dip"
+                    android:layout_height="15dip"
+                    android:layout_marginLeft="5dip"
+                    android:contentDescription="@string/f_like"
+                    android:src="@drawable/ic_action_good" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="@string/f_like"
+                    android:textSize="@dimen/lbl_font_size_tiny" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btnDislike"
+                android:layout_width="105dip"
+                android:layout_height="25dip"
+                android:layout_marginLeft="110dip"
+                android:background="@drawable/btn"
+                android:clickable="true"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="2.5dip" >
+
+                <TextView
+                    android:id="@+id/txtDislikes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="0"
+                    android:textSize="@dimen/lbl_font_size_tiny" />
+
+                <ImageView
+                    android:layout_width="15dip"
+                    android:layout_height="15dip"
+                    android:layout_marginLeft="5dip"
+                    android:contentDescription="@string/f_unlike"
+                    android:src="@drawable/ic_action_bad" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="@string/f_unlike"
+                    android:textSize="@dimen/lbl_font_size_tiny" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/txtTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|bottom"
+                android:gravity="right"
+                android:tag="t"
+                android:text="22/05 18:00"
+                android:textColor="@color/gray_dark"
+                android:textSize="@dimen/lbl_font_size_tiny" />
+        </FrameLayout>
     </LinearLayout>
 
 </LinearLayout>
