--- a/Android/Legion/res/layout/event_head.xml
+++ b/Android/Legion/res/layout/event_head.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/txt_edit"
+        android:background="@drawable/txt_default"
         android:orientation="vertical"
         android:padding="@dimen/fields_spacing_labels" >
 
