--- a/Android/Legion/res/layout/frg_list.xml
+++ b/Android/Legion/res/layout/frg_list.xml
@@ -13,6 +13,7 @@
         android:choiceMode="singleChoice"
         android:divider="@color/transparent"
         android:dividerHeight="0dp"
+        android:listSelector="@android:color/transparent"
         android:scrollbars="vertical" />
 
 </RelativeLayout>
