--- a/Android/Legion/res/layout/frg_login.xml
+++ b/Android/Legion/res/layout/frg_login.xml
@@ -23,7 +23,7 @@
             android:layout_height="@dimen/txt_height"
             android:layout_gravity="top|center_horizontal"
             android:layout_marginTop="20dip"
-            android:background="@drawable/txt_edit"
+            android:background="@drawable/txt"
             android:ellipsize="end"
             android:gravity="center"
             android:hint="@string/f_login_user"
@@ -38,7 +38,7 @@
             android:layout_height="@dimen/txt_height"
             android:layout_gravity="top|center_horizontal"
             android:layout_marginTop="20dip"
-            android:background="@drawable/txt_edit"
+            android:background="@drawable/txt"
             android:ellipsize="end"
             android:gravity="center"
             android:hint="@string/f_login_pass"
