--- a/Android/Legion/res/layout/frg_map.xml
+++ b/Android/Legion/res/layout/frg_map.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -9,4 +9,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</RelativeLayout>
+    <FrameLayout
+        android:id="@+id/btnCenter"
+        android:layout_width="45dip"
+        android:layout_height="45dip"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="15dip"
+        android:layout_marginRight="15dip"
+        android:background="@drawable/txt_default"
+        android:padding="5dip" >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_action_location_found" />
+    </FrameLayout>
+
+</FrameLayout>
