--- a/Android/Legion/res/layout/event_head.xml
+++ b/Android/Legion/res/layout/event_head.xml
@@ -2,31 +2,133 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/fields_spacing_labels" >
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/txt_default"
         android:orientation="vertical"
         android:padding="@dimen/fields_spacing_labels" >
 
         <TextView
-            android:id="@+id/txtTitle"
+            android:id="@+id/txtName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Reivindicações"
+            android:gravity="center"
             android:textSize="@dimen/lbl_font_size_default" />
+
+        <TextView
+            android:id="@+id/txtDate"
+            android:layout_width="wrap_content"
+            android:layout_height="14dip"
+            android:layout_gravity="center"
+            android:drawableLeft="@drawable/ic_action_next_item"
+            android:drawableRight="@drawable/ic_action_previous_item"
+            android:tag="t"
+            android:textColor="@color/gray_dark"
+            android:textSize="@dimen/lbl_font_size_tiny" />
 
         <TextView
             android:id="@+id/txtDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/fields_spacing_labels"
-            android:tag="l"
-            android:text=" - Melhores condições de trabalho\n - Melhores salários"
+            android:layout_marginTop="10dip"
             android:textSize="@dimen/lbl_font_size_small" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dip"
+            android:layout_marginTop="10dip"
+            android:gravity="right"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:id="@+id/btnDislike"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_marginRight="2.5dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn"
+                android:clickable="true"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="2.5dip" >
+
+                <TextView
+                    android:id="@+id/txtDislikes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="0"
+                    android:textSize="@dimen/lbl_font_size_small" />
+
+                <ImageView
+                    android:layout_width="25dip"
+                    android:layout_height="25dip"
+                    android:layout_marginLeft="5dip"
+                    android:contentDescription="@string/f_unlike"
+                    android:src="@drawable/ic_action_bad" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="@string/f_unlike"
+                    android:textColor="@color/gray_red"
+                    android:textSize="@dimen/lbl_font_size_tiny" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btnLike"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2.5dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn"
+                android:clickable="true"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="2.5dip" >
+
+                <TextView
+                    android:id="@+id/txtLikes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="0"
+                    android:textSize="@dimen/lbl_font_size_small" />
+
+                <ImageView
+                    android:layout_width="25dip"
+                    android:layout_height="25dip"
+                    android:layout_marginLeft="5dip"
+                    android:contentDescription="@string/f_like"
+                    android:src="@drawable/ic_action_good" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="@string/f_like"
+                    android:textColor="@color/gray_green"
+                    android:textSize="@dimen/lbl_font_size_tiny" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginBottom="5dip"
+        android:layout_marginTop="2.5dip"
+        android:background="@color/gray_half" />
 
 </LinearLayout>
