--- a/Android/Legion/res/layout/event_row.xml
+++ b/Android/Legion/res/layout/event_row.xml
@@ -19,59 +19,45 @@
             android:textSize="@dimen/lbl_font_size_default" />
 
         <TextView
+            android:id="@+id/txtDate"
+            android:layout_width="wrap_content"
+            android:layout_height="14dip"
+            android:drawableLeft="@drawable/ic_action_next_item"
+            android:drawableRight="@drawable/ic_action_previous_item"
+            android:gravity="left|center_vertical"
+            android:tag="t"
+            android:textColor="@color/gray_dark"
+            android:textSize="@dimen/lbl_font_size_tiny" />
+
+        <TextView
             android:id="@+id/txtDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
             android:textSize="@dimen/lbl_font_size_small" />
 
-        <FrameLayout
+        <TextView
+            android:id="@+id/txtSubjects"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="14dip"
+            android:gravity="right|center_vertical"
+            android:tag="t"
+            android:textColor="@color/gray_dark"
+            android:textSize="@dimen/lbl_font_size_tiny" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dip"
             android:layout_marginTop="5dip"
+            android:gravity="right"
             android:orientation="horizontal" >
 
             <LinearLayout
-                android:id="@+id/btnLike"
-                android:layout_width="105dip"
-                android:layout_height="25dip"
-                android:background="@drawable/btn"
-                android:clickable="true"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="2.5dip" >
-
-                <TextView
-                    android:id="@+id/txtLikes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left|center_vertical"
-                    android:gravity="left|center_vertical"
-                    android:tag="t"
-                    android:text="0"
-                    android:textSize="@dimen/lbl_font_size_tiny" />
-
-                <ImageView
-                    android:layout_width="15dip"
-                    android:layout_height="15dip"
-                    android:layout_marginLeft="5dip"
-                    android:contentDescription="@string/f_like"
-                    android:src="@drawable/ic_action_good" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left|center_vertical"
-                    android:gravity="left|center_vertical"
-                    android:tag="t"
-                    android:text="@string/f_like"
-                    android:textSize="@dimen/lbl_font_size_tiny" />
-            </LinearLayout>
-
-            <LinearLayout
                 android:id="@+id/btnDislike"
-                android:layout_width="105dip"
-                android:layout_height="25dip"
-                android:layout_marginLeft="110dip"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_marginRight="2.5dip"
+                android:layout_weight="1"
                 android:background="@drawable/btn"
                 android:clickable="true"
                 android:gravity="center"
@@ -86,11 +72,11 @@
                     android:gravity="left|center_vertical"
                     android:tag="t"
                     android:text="0"
-                    android:textSize="@dimen/lbl_font_size_tiny" />
+                    android:textSize="@dimen/lbl_font_size_small" />
 
                 <ImageView
-                    android:layout_width="15dip"
-                    android:layout_height="15dip"
+                    android:layout_width="25dip"
+                    android:layout_height="25dip"
                     android:layout_marginLeft="5dip"
                     android:contentDescription="@string/f_unlike"
                     android:src="@drawable/ic_action_bad" />
@@ -102,20 +88,56 @@
                     android:gravity="left|center_vertical"
                     android:tag="t"
                     android:text="@string/f_unlike"
+                    android:textColor="@color/gray_red"
                     android:textSize="@dimen/lbl_font_size_tiny" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/txtTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|bottom"
-                android:gravity="right"
-                android:tag="t"
-                android:text="22/05 18:00"
-                android:textColor="@color/gray_dark"
-                android:textSize="@dimen/lbl_font_size_tiny" />
-        </FrameLayout>
+            <LinearLayout
+                android:id="@+id/btnLike"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2.5dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn"
+                android:clickable="true"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="2.5dip" >
+
+                <TextView
+                    android:id="@+id/txtLikes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="0"
+                    android:textSize="@dimen/lbl_font_size_small" />
+
+                <ImageView
+                    android:layout_width="25dip"
+                    android:layout_height="25dip"
+                    android:layout_marginLeft="5dip"
+                    android:contentDescription="@string/f_like"
+                    android:src="@drawable/ic_action_good" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="@string/f_like"
+                    android:textColor="@color/gray_green"
+                    android:textSize="@dimen/lbl_font_size_tiny" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <View
+            android:id="@+id/layExtras"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
     </LinearLayout>
 
 </LinearLayout>
