--- a/Android/Legion/res/layout/frg_notifications.xml
+++ b/Android/Legion/res/layout/frg_notifications.xml
@@ -18,4 +18,18 @@
         android:listSelector="@android:color/transparent"
         android:scrollbars="vertical" />
 
+    <TextView
+        android:id="@+id/txtEmpty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="50dip"
+        android:gravity="center"
+        android:singleLine="false"
+        android:text="@string/f_notification_empty"
+        android:textSize="@dimen/lbl_font_size_small"
+        android:visibility="gone" />
+
+    <include layout="@layout/help" />
+
 </FrameLayout>
