--- a/Android/Legion/res/layout/comment_row.xml
+++ b/Android/Legion/res/layout/comment_row.xml
@@ -16,28 +16,39 @@
             android:id="@+id/txtDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
             android:textSize="@dimen/lbl_font_size_small" />
 
         <TextView
-            android:id="@+id/txtDate"
+            android:id="@+id/txtOwner"
             android:layout_width="wrap_content"
             android:layout_height="14dip"
-            android:drawableLeft="@drawable/ic_action_next_item"
-            android:drawableRight="@drawable/ic_action_previous_item"
             android:gravity="left|center_vertical"
             android:tag="t"
             android:textColor="@color/gray_dark"
             android:textSize="@dimen/lbl_font_size_tiny" />
 
-        <TextView
-            android:id="@+id/txtAnswers"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="14dip"
-            android:gravity="right|center_vertical"
-            android:tag="t"
-            android:textColor="@color/gray_dark"
-            android:textSize="@dimen/lbl_font_size_tiny" />
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/txtDate"
+                android:layout_width="wrap_content"
+                android:layout_height="14dip"
+                android:gravity="left|center_vertical"
+                android:tag="t"
+                android:textColor="@color/gray_half_light"
+                android:textSize="@dimen/lbl_font_size_tiny" />
+
+            <TextView
+                android:id="@+id/txtAnswers"
+                android:layout_width="match_parent"
+                android:layout_height="14dip"
+                android:gravity="right|center_vertical"
+                android:tag="t"
+                android:textColor="@color/gray_half_light"
+                android:textSize="@dimen/lbl_font_size_tiny" />
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,7 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:gravity="left|center_vertical"
-                    android:tag="t"
+                    android:tag="l"
                     android:text="@string/f_unlike"
                     android:textColor="@color/gray_red"
                     android:textSize="@dimen/lbl_font_size_tiny" />
@@ -120,7 +131,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:gravity="left|center_vertical"
-                    android:tag="t"
+                    android:tag="l"
                     android:text="@string/f_like"
                     android:textColor="@color/gray_green"
                     android:textSize="@dimen/lbl_font_size_tiny" />
