--- a/Android/Legion/res/layout/event_head.xml
+++ b/Android/Legion/res/layout/event_head.xml
@@ -35,10 +35,100 @@
             android:layout_marginTop="10dip"
             android:textSize="@dimen/lbl_font_size_small" />
 
+        <TextView
+            android:id="@+id/txtOwner"
+            android:layout_width="match_parent"
+            android:layout_height="14dip"
+            android:layout_marginTop="5dip"
+            android:gravity="left|center_vertical"
+            android:tag="t"
+            android:textColor="@color/gray_dark"
+            android:textSize="@dimen/lbl_font_size_tiny" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="30dip"
             android:layout_marginTop="10dip"
+            android:baselineAligned="false"
+            android:gravity="right"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:id="@+id/btnEdit"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_marginRight="2.5dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn"
+                android:clickable="true"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="2.5dip" >
+
+                <ImageView
+                    android:layout_width="25dip"
+                    android:layout_height="25dip"
+                    android:layout_marginLeft="5dip"
+                    android:contentDescription="@string/f_unlike"
+                    android:src="@drawable/ic_action_edit" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="l"
+                    android:text="@string/f_to_edit"
+                    android:textColor="@color/gray_dark"
+                    android:textSize="@dimen/lbl_font_size_tiny" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btnCheckin"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2.5dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn"
+                android:clickable="true"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="2.5dip" >
+
+                <TextView
+                    android:id="@+id/txtCheckins"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="t"
+                    android:text="0"
+                    android:textSize="@dimen/lbl_font_size_small" />
+
+                <ImageView
+                    android:layout_width="25dip"
+                    android:layout_height="25dip"
+                    android:layout_marginLeft="5dip"
+                    android:contentDescription="@string/f_like"
+                    android:src="@drawable/ic_action_place" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="left|center_vertical"
+                    android:tag="l"
+                    android:text="@string/f_checkin"
+                    android:textColor="@color/blue_light"
+                    android:textSize="@dimen/lbl_font_size_tiny" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dip"
+            android:layout_marginTop="5dip"
+            android:baselineAligned="false"
             android:gravity="right"
             android:orientation="horizontal" >
 
@@ -76,7 +166,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:gravity="left|center_vertical"
-                    android:tag="t"
+                    android:tag="l"
                     android:text="@string/f_unlike"
                     android:textColor="@color/gray_red"
                     android:textSize="@dimen/lbl_font_size_tiny" />
@@ -116,7 +206,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:gravity="left|center_vertical"
-                    android:tag="t"
+                    android:tag="l"
                     android:text="@string/f_like"
                     android:textColor="@color/gray_green"
                     android:textSize="@dimen/lbl_font_size_tiny" />
@@ -124,11 +214,25 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:layout_marginBottom="5dip"
-        android:layout_marginTop="2.5dip"
-        android:background="@color/gray_half" />
+        android:layout_height="wrap_content" >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:layout_gravity="center"
+            android:background="@color/gray_half" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="#fff"
+            android:paddingLeft="10dip"
+            android:paddingRight="10dip"
+            android:text="@string/f_subjects"
+            android:textSize="@dimen/lbl_font_size_small" />
+    </FrameLayout>
 
 </LinearLayout>
