--- a/Android/Legion/res/layout/frg_list.xml
+++ b/Android/Legion/res/layout/frg_list.xml
@@ -18,6 +18,17 @@
         android:listSelector="@android:color/transparent"
         android:scrollbars="vertical" />
 
+    <TextView
+        android:id="@+id/txtEmpty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="50dip"
+        android:gravity="center"
+        android:singleLine="false"
+        android:textSize="@dimen/lbl_font_size_small"
+        android:visibility="gone" />
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="40dip"
@@ -77,5 +88,7 @@
             android:textColor="@color/red_dark"
             android:textSize="@dimen/lbl_font_size_small" />
     </FrameLayout>
+
+    <include layout="@layout/help" />
 
 </FrameLayout>
