--- a/Android/Legion/res/layout/frg_map.xml
+++ b/Android/Legion/res/layout/frg_map.xml
@@ -22,7 +22,10 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:contentDescription="@string/f_to_center"
             android:src="@drawable/ic_action_location_found" />
     </FrameLayout>
+
+    <include layout="@layout/help" />
 
 </FrameLayout>
