--- a/Android/Legion/res/layout/subject_head.xml
+++ b/Android/Legion/res/layout/subject_head.xml
@@ -14,19 +14,32 @@
             android:id="@+id/txtDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
             android:textSize="@dimen/lbl_font_size_small" />
 
-        <TextView
-            android:id="@+id/txtDate"
-            android:layout_width="wrap_content"
-            android:layout_height="14dip"
-            android:drawableLeft="@drawable/ic_action_next_item"
-            android:drawableRight="@drawable/ic_action_previous_item"
-            android:gravity="left|center_vertical"
-            android:tag="t"
-            android:textColor="@color/gray_dark"
-            android:textSize="@dimen/lbl_font_size_tiny" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/txtOwner"
+                android:layout_width="wrap_content"
+                android:layout_height="14dip"
+                android:gravity="left|center_vertical"
+                android:tag="t"
+                android:textColor="@color/gray_dark"
+                android:textSize="@dimen/lbl_font_size_tiny" />
+
+            <TextView
+                android:id="@+id/txtDate"
+                android:layout_width="match_parent"
+                android:layout_height="14dip"
+                android:gravity="right|center_vertical"
+                android:tag="t"
+                android:textColor="@color/gray_half_light"
+                android:textSize="@dimen/lbl_font_size_tiny" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,7 +82,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:gravity="left|center_vertical"
-                    android:tag="t"
+                    android:tag="l"
                     android:text="@string/f_unlike"
                     android:textColor="@color/gray_red"
                     android:textSize="@dimen/lbl_font_size_tiny" />
@@ -109,7 +122,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:gravity="left|center_vertical"
-                    android:tag="t"
+                    android:tag="l"
                     android:text="@string/f_like"
                     android:textColor="@color/gray_green"
                     android:textSize="@dimen/lbl_font_size_tiny" />
@@ -117,11 +130,25 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:layout_marginBottom="5dip"
-        android:layout_marginTop="2.5dip"
-        android:background="@color/gray_half" />
+        android:layout_height="wrap_content" >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:layout_gravity="center"
+            android:background="@color/gray_half" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="#fff"
+            android:paddingLeft="10dip"
+            android:paddingRight="10dip"
+            android:text="@string/f_comments"
+            android:textSize="@dimen/lbl_font_size_small" />
+    </FrameLayout>
 
 </LinearLayout>
