--- a/Android/Legion/res/layout/subject_row.xml
+++ b/Android/Legion/res/layout/subject_row.xml
@@ -19,6 +19,15 @@
             android:layout_marginBottom="10dip"
             android:textSize="@dimen/lbl_font_size_small" />
 
+        <TextView
+            android:id="@+id/txtOwner"
+            android:layout_width="wrap_content"
+            android:layout_height="14dip"
+            android:gravity="left|center_vertical"
+            android:tag="t"
+            android:textColor="@color/gray_dark"
+            android:textSize="@dimen/lbl_font_size_tiny" />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
@@ -83,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:gravity="left|center_vertical"
-                    android:tag="t"
+                    android:tag="l"
                     android:text="@string/f_unlike"
                     android:textColor="@color/gray_red"
                     android:textSize="@dimen/lbl_font_size_tiny" />
@@ -123,7 +132,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:gravity="left|center_vertical"
-                    android:tag="t"
+                    android:tag="l"
                     android:text="@string/f_like"
                     android:textColor="@color/gray_green"
                     android:textSize="@dimen/lbl_font_size_tiny" />
