--- a/Android/Legion/res/drawable/txt_default.xml
+++ b/Android/Legion/res/drawable/txt_default.xml
@@ -5,6 +5,6 @@
         android:width="0.5dip"
         android:color="#b3b3b3" />
 
-    <solid android:color="#f5f5f5" />
+    <solid android:color="#ffffff" />
 
 </shape>
