--- a/Android/Legion/res/layout/frg_list.xml
+++ b/Android/Legion/res/layout/frg_list.xml
@@ -89,6 +89,6 @@
             android:textSize="@dimen/lbl_font_size_small" />
     </FrameLayout>
 
-    <include layout="@layout/help" />
+    <include layout="@layout/view_help" />
 
 </FrameLayout>
