--- a/Android/Legion/res/layout/frg_login.xml
+++ b/Android/Legion/res/layout/frg_login.xml
@@ -62,6 +62,6 @@
             android:textSize="@dimen/txt_font_size_default" />
     </LinearLayout>
 
-    <include layout="@layout/help" />
+    <include layout="@layout/view_help" />
 
 </FrameLayout>
