--- a/Android/Legion/res/layout/frg_new_user.xml
+++ b/Android/Legion/res/layout/frg_new_user.xml
@@ -86,6 +86,6 @@
             android:textSize="@dimen/txt_font_size_default" />
     </LinearLayout>
 
-    <include layout="@layout/help" />
+    <include layout="@layout/view_help" />
 
 </FrameLayout>
